2009-08-18  David Grundberg  <individ@acc.umu.se>

	* aclocal.m4 (OCTAVE_CHECK_LIBRARY): Clear QHULL_LIBS etc on
	errors. Interpret --without-qhull etc correctly.

2009-08-17  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in, mkoctfile.cc.in (FFTW3_LDFLAGS, FFTW3_LIBS,
	FFTW3F_LDFLAGS, FFTW3F_LIBS): Substitute instead of FFTW_LIBS.
	(FFTW_LIBS): Define from FFTW3_LDFLAGS, FFTW3_LIBS,
	FFTW3F_LDFLAGS, and FFTW3F_LIBS variables.

	* octave-bug.cc.in, octave-bug.in (Z_CPPFLAGS, Z_LDFLAGS):
	Substitute and display them.
	(Z_LIBS): Rename from ZLIB_LIBS.
	* configure.in: Use OCTAVE_CHECK_LIBRARY to check for ZLIB.
	Print Z_CPPFLAGS and Z_LDFLAGS in the summary.
	* Makeconf.in (Z_CPPFLAGS, Z_LDFLAGS): New variables.
	(Z_LIBS): Rename from ZLIB_LIBS.
	(do-subst-config-vals): Substitute them.

	(ALL_CPPFLAGS): New variable.
	(%.o : %.c, %.o : %.cc, pic/%.o : %.c, pic/%.o : %.cc):
	Use $(ALL_CPPFLAGS) instead of $(CPPFLAGS) in command.

2009-08-17  John W. Eaton  <jwe@octave.org>

	* octave-bug.in, octave-bug.cc.in: Include AMD_CPPFLAGS,
	AMD_LDFLAGS, AMD_LIBS, ARPACK_LIBS, BLAS_LIBS, CAMD_CPPFLAGS,
	CAMD_LDFLAGS, CAMD_LIBS, CARBON_LIBS, CCOLAMD_CPPFLAGS,
	CCOLAMD_LDFLAGS, CCOLAMD_LIBS, CHOLMOD_CPPFLAGS, CHOLMOD_LDFLAGS,
	CHOLMOD_LIBS, COLAMD_CPPFLAGS, COLAMD_LDFLAGS, COLAMD_LIBS,
	CURL_CPPFLAGS, CURL_LDFLAGS, CURL_LIBS, CXSPARSE_CPPFLAGS,
	CXSPARSE_LDFLAGS, CXSPARSE_LIBS, DL_LIBS, FFTW3_CPPFLAGS,
	FFTW3_LDFLAGS, FFTW3_LIBS, FFTW3F_CPPFLAGS, FFTW3F_LDFLAGS,
	FFTW3F_LIBS, GRAPHICS_LIBS, GLPK_CPPFLAGS, GLPK_LDFLAGS,
	GLPK_LIBS, HDF5_LIBS, OPENGL_LIBS, PTHREAD_CFLAGS, PTHREAD_LIBS,
	QHULL_CPPFLAGS, QHULL_LDFLAGS, QHULL_LIBS, QRUPDATE_LIBS,
	READLINE_LIBS, REGEX_LIBS, TERM_LIBS, UMFPACK_LIBS, X11_INCFLAGS,
	X11_LIBS, and ZLIB_LIBS in the summary of varibles.

	* configure.in: Include LEXLIB and LIBGLOB in the summary.

2009-08-17  Michael Goffioul  <michael.goffioul@gmail.com>

	* aclocal.m4 (OCTAVE_HDF5_DLL): Include HDF5_LIBS in LIBS before
	attempting link.
